src/test/ui/issues/issue-30438-c.nll.stderr
error[E0597]: `x` does not live long enough
  --> $DIR/issue-30438-c.rs:19:5
   |
LL | fn silly<'y, 'z>(_s: &'y Test<'z>) -> &'y <Test<'z> as Trait>::Out where 'z: 'static {
   |                      ------------     ---------------------------- has type `&'y <Test<'z> as Trait>::Out`
   |                      |
   |                      has type `&'y Test<'z>`
LL |     let x = Test { s: "this cannot last" };
LL |     &x
   |     ^^ `x` would have to be valid for `'y`
LL |     //~^ ERROR: `x` does not live long enough
LL | }
   | - but `x` dropped here while still borrowed

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
